# parsely_analysis

./: .gitignore  README.md  __init__.py  comparison.csv  comparison.html  example.csv  example_commands.md  journalist_metrics.py  monthly_auth_rank.py  pyproject.toml  requirements.txt  startup.fish  target_format_for_lena.txt  working_commands.sh
input_v731/hidden/: .~lock.posts-export-by-page-views-Jul-01-2024-Jul-31-2025-indyweek-com_7_31_3_06pm.csv#
input_v731/monthly/: posts-export-by-page-views-Apr-01-2025-Apr-30-2025-indyweek-com.csv  posts-export-by-page-views-Dec-01-2024-Dec-31-2024-indyweek-com.csv  posts-export-by-page-views-Jul-01-2025-Jul-31-2025-indyweek-com.csv  posts-export-by-page-views-Jun-01-2025-Jun-30-2025-indyweek-com.csv  posts-export-by-page-views-Mar-01-2025-Mar-31-2025-indyweek-com.csv  posts-export-by-page-views-May-01-2025-May-31-2025-indyweek-com.csv  posts-export-by-page-views-Nov-01-2024-Nov-30-2024-indyweek-com.csv  posts-export-by-page-views-Oct-01-2024-Oct-31-2024-indyweek-com.csv
src/: analyze_7_30_10pm_1.py  analyze_7_30_10pm_2.py  analyze_7_30_10pm_3.py  analyze_7_30_10pm_4.py  analyze_7_30_10pm_5.py  analyze_7_30_10pm_6.py  analyze_journalists.py  backup_1_analyze_journalists.py  backup_2_analyze_journalists.py  splitter_1.py  v731_1.py  v731_2.py  v731_20.py  v731_24 no.py  v731_27 no.py  v731_3.py  v731_4.py  v731_5.py  v731_6.py
src/parsely_analysis/: backup__monthly_auth_rank.py  journalist_metrics.py  monthly_auth_rank.py
